Revert "Fix permalink z-index"
This reverts commit 8f40e32b0984260d67c301b9edc5d4a678cb7cc1.

--- a/site/src/app/plot-card/plot-card.component.css
+++ b/site/src/app/plot-card/plot-card.component.css
@@ -46,7 +46,3 @@ p.justify {
 .z10 {
     z-index: 10;
 }
-
-.z11 {
-    z-index: 11;
-}
